--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,178 @@
 </head><!--/head-->
 <body>
     <!-- Inserte código aqui -->
-
+    <header class="navbar navbar-inverse navbar-fixed-top wet-asphalt" role="banner">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about-us.html">About us</a></li>
+                    <li class="active"><a href="services.html">Services</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="blog.html">Blog</a></li> 
+                    <li><a href="contact-us.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <section id="titulo">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+            <h1 class="space">Services</h1>
+            <p class="text">Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+                </div>
+                <div class="col-sm-6 text-right pt">
+                    <a class="other" href="#">Home</a>
+                    <a class="other" href="#">/ About us</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="background-fondo">
+    <div  class="container">
+        <div class="row">
+            <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="images/portfolio/full/item1.jpg" class="img-responsive">
+             </div>
+            </div>
+            <div class="col-md-4">
+            	<div class="thumbnail">
+                <img src="images/portfolio/full/item2.jpg" class="img-responsive">
+               </div>
+            </div>
+            <div class="col-md-4">
+            	<div class="thumbnail">
+                <img src="images/portfolio/full/item3.jpg" class="img-responsive">
+                </div>
+            </div>
+        </div>
+         <div class="row">
+            <div class="col-md-4">
+            	<div class="thumbnail">
+                <img src="images/portfolio/full/item4.jpg" class="img-responsive">
+                </div>
+            </div>
+            <div class="col-md-4">
+            	<div class="thumbnail">
+                <img src="images/portfolio/full/item5.jpg" class="img-responsive">
+                </div>
+            </div>
+            <div class="col-md-4">
+            	<div class="thumbnail">
+                <img src="images/portfolio/full/item6.jpg" class="img-responsive"> 
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
+    <section id="generales">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 col-sm-6">
+                <h4>About us</h4>
+                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+                </p>
+                <p>Pellentesque habitant morbi tristique senectus.</p>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <h4>Company</h4>
+                <ul class="options">
+                            <li><a href="#" class="zoom">Company Overview</a></li>
+                            <li><a href="#" class="zoom">Meet The Team</a></li>
+                            <li><a href="#" class="zoom">Our Awesome Partners</a></li>
+                            <li><a href="#" class="zoom">Our Services</a></li>
+                            <li><a href="#" class="zoom">Frequently Asked Questions</a></li>
+                            <li><a href="#" class="zoom">Contact Us</a></li>
+                            <li><a href="#" class="zoom">Privacy Policy</a></li>
+                            <li><a href="#" class="zoom">Terms of Use</a></li>
+                            <li><a href="#" class="zoom">Copyright</a></li>
+                </ul>
+            </div>
+            <!--El media-heading lo que hace es anida el elemento multimedia a la izquierda o derecha con la propiedad float o pull-->
+            <div class="col-md-3 col-sm-6">
+                <h4>Latest Blog</h4>
+                <div class="media">
+                    <div class="pull-left">
+                        <img src="images/blog/thumb1.jpg" alt="">
+                    </div>
+                    <div class="media-body">
+                        <span class="media-heading"><a href="#">Pellentesque habitant morbi tristique senectus</a>
+                        </span>
+                        <br>
+                        <small class="muted">Posted 17 Aug 2013</small>
+                    </div>
+                </div>
+                <div class="media">
+                    <div class="pull-left">
+                        <img src="images/blog/thumb2.jpg" alt="">
+                    </div>
+                    <div class="media-body">
+                        <span class="media-heading"><a href="#">Pellentesque habitant morbi tristique senectus</a>
+                        </span>
+                        <br>
+                        <small class="muted">Posted 13 Sep 2013</small>
+                    </div>
+                </div>
+                <div class="media">
+                    <div class="pull-left">
+                        <img src="images/blog/thumb3.jpg" alt="">
+                    </div>
+                    <div class="media-body">
+                        <span class="media-heading"><a href="#">Pellentesque habitant morbi tristique senectus</a>
+                        </span>
+                        <br>
+                        <small class="muted">Posted 11 Jul 2013</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <h4>Adress</h4>
+                <address><!--La etiqueta <abbr> permite indicar abreviaturas-->
+                        <strong>Twitter, Inc.</strong><br>
+                        795 Folsom Ave, Suite 600<br>
+                        San Francisco, CA 94107<br>
+                        <abbr>P:</abbr> (147) 365-900
+                </address>
+                <br>
+                <h4>Newsletter</h4>
+                <div class="input-group">
+                    <input type="text" class="form-control" autocomplete="off" placeholder="Enter your email☺">
+                    <span class="input-group-btn">
+                        <button class="btn btn-danger" type="button">Go!</button>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+    <footer id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <p>©2013 Shapebootstrap. All right reserved.</p>
+            </div>
+            <div class="col-md-8">
+            <ul class="pull-right">
+                        <li><a class="zoom" href="#">Home</a></li>
+                        <li><a class="zoom" href="#">About Us</a></li>
+                        <li><a class="zoom" href="#">Faq</a></li>
+                        <li><a class="zoom" href="#">Contact Us</a></li>
+                        <li><a class="zoom" id="gototop" href="#"><i class="icon-chevron-up"></i></a></li>
+            </ul></div>
+        </div>
+    </div>
+</footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
